--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,41 +8,27 @@
     .wheel {
         width: 200px;
         height: 200px;
-        border: 10px solid #000;
         border-radius: 50%;
+        border: 16px solid transparent;
+        border-top-color: red; /* Red segment */
+        border-right-color: blue; /* Blue segment */
+        border-bottom-color: yellow; /* Yellow segment */
+        border-left-color: green; /* Green segment */
         position: relative;
         margin: 100px auto;
+        transition: transform 4s cubic-bezier(0, 0.99, 0.44, 0.99);
     }
-    .wheel div {
+    .wheel:before {
+        content: '';
         position: absolute;
-        width: 50%;
-        height: 50%;
-        overflow: hidden;
-        border: 2px solid #fff;
-    }
-    .wheel div:after {
-        content: "";
-        position: absolute;
-        left: 100%;
+        z-index: 100;
         top: 50%;
-        width: 200%;
-        height: 200%;
+        left: 50%;
         transform: translate(-50%, -50%);
-    }
-    .wheel .section1:after {
-        content: "BEIJO";
-    }
-    .wheel .section2:after {
-        content: "ABRAÇO";
-        transform: rotate(90deg) translate(-50%, -50%);
-    }
-    .wheel .section3:after {
-        content: "CELINHO";
-        transform: rotate(180deg) translate(-50%, -50%);
-    }
-    .wheel .section4:after {
-        content: "OUTRO...";
-        transform: rotate(270deg) translate(-50%, -50%);
+        width: 160px;
+        height: 160px;
+        background: #FFF;
+        border-radius: 50%;
     }
     .pointer {
         width: 20px;
@@ -52,16 +38,50 @@
         top: -40px;
         left: 50%;
         transform: translateX(-50%);
+        z-index: 99;
+    }
+    .labels {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 200px;
+        height: 200px;
+        pointer-events: none;
+        transform: translate(-50%, -50%);
+    }
+    .labels div {
+        position: absolute;
+        /* ...continuando do último ponto do código... */
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transform-origin: 50%;
+    }
+    .labels div:nth-child(1) { /* BEIJO */
+        transform: rotate(45deg);
+    }
+    .labels div:nth-child(2) { /* ABRAÇO */
+        transform: rotate(135deg);
+    }
+    .labels div:nth-child(3) { /* CELINHO */
+        transform: rotate(225deg);
+    }
+    .labels div:nth-child(4) { /* OUTRO... */
+        transform: rotate(315deg);
     }
 </style>
 </head>
 <body>
 
 <div class="wheel" id="wheel">
-    <div class="section1"></div>
-    <div class="section2"></div>
-    <div class="section3"></div>
-    <div class="section4"></div>
+    <div class="labels">
+        <div>BEIJO</div>
+        <div>ABRAÇO</div>
+        <div>CELINHO</div>
+        <div>OUTRO...</div>
+    </div>
 </div>
 <div class="pointer"></div>
 
@@ -71,14 +91,14 @@
     function spin() {
         var wheel = document.getElementById('wheel');
         var deg = Math.floor(5000 + Math.random() * 5000); // Generate a large random number
-        wheel.style.transition = 'all 10s ease-out'; // Set the transition for smoothness
+        wheel.style.transition = 'transform 4s cubic-bezier(0, 0.99, 0.44, 0.99)'; // Set the transition for smoothness
         wheel.style.transform = `rotate(${deg}deg)`; // Rotate the wheel
         // Reset for next spin
         setTimeout(function() {
             wheel.style.transition = 'none';
             var actualDeg = deg % 360;
             wheel.style.transform = `rotate(${actualDeg}deg)`;
-        }, 10000); // This has to be the same as the transition time
+        }, 4000); // This has to be the same as the transition time
     }
 </script>
 
