--- a/index.html
+++ b/index.html
@@ -39,12 +39,15 @@
 
   .pointer {
     position: absolute;
-    top: -10px;
+    top: -10px; /* Posiciona a flecha acima da roleta */
     left: 50%;
-    transform: translateX(-50%);
-    height: 30px;
-    width: 10px;
-    background-color: #ff0000;
+    transform: translateX(-50%) rotate(0deg); /* Rotaciona a flecha para apontar para baixo */
+    height: 0;
+    width: 0;
+    border-left: 20px solid transparent;
+    border-right: 20px solid transparent;
+    border-top: 30px solid #000; /* A flecha é preta agora e a borda superior é usada */
+    z-index: 10;
   }
 
   .section1 { background-color: #FFD700; transform: rotate(45deg); }
@@ -54,7 +57,7 @@
 
   .prize {
     text-align: center;
-    font-size: 2em; /* Ajuste o tamanho conforme necessário */
+    font-size: 1.5em; /* Ajuste o tamanho conforme necessário */
     color: red;
     animation: blinkingText 1.5s infinite, colorChange 3s infinite;
     position: absolute; /* Para alinhar com a roleta */
@@ -84,7 +87,7 @@
 <body>
 
 <div class="wheel-container">
-<div class="prize">PRÊMIO</div>
+<div class="prize">RETIRAR PRÊMIO</div>
 
   <div class="pointer"></div>
   <div id="wheel" class="wheel">
@@ -95,7 +98,7 @@
   </div>
 </div>
 
-<button onclick="spinWheel()">RETIRAR PREMIO!!!</button>
+<button onclick="spinWheel()">RODA A RODA!!!</button>
 
 <script>
   function spinWheel() {
