--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <style>
   .wheel-container {
     position: relative;
-    width: 200px;
-    height: 200px;
+    width: 230px;
+    height: 230px;
     border: 2px solid #000;
     border-radius: 50%;
     margin: 50px auto;
@@ -120,8 +120,8 @@ button:active {
   <div id="wheel" class="wheel">
     <div class="segment section1">BEIJO...</div>
     <div class="segment section2">ABRAÇO...</div>
-    <div class="segment section3">BEIJO...</div>
-    <div class="segment section4">ABRAÇO...</div>
+    <div class="segment section3">SELINHO...</div>
+    <div class="segment section4">VC ESCOLHE</div>
   </div>
 </div>
 
